add text for iterative optimization evaluation auto reformating of some tex code

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -61,6 +61,7 @@
 \newcommand{\gptf}[0]{\ac{gpt-5-mini}\xspace}
 \newcommand{\OAI}[0]{OpenAI\xspace}
 \newcommand{\AI}[0]{\ac{AI}\xspace}
+\newcommand{\fone}[0]{F\textsubscript{1}-Score\xspace}
 
 
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
