--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -1,4 +1,5 @@
 \chapter{Approach}
+\label{ch:Approach}
 In this chapter, I will outline how my thesis will be realized and provide source code that can be merged into the \LiSSA project.
 My work aims to implement three different classifiers into the framework.
 First, I plan to implement a simple \ToT classifier in \autoref{approach:sec:tot} to broaden the baseline to compare later optimized prompts against.
