--- a/tables/SimpleAndRepeatedOptimization.tex
+++ b/tables/SimpleAndRepeatedOptimization.tex
@@ -1,7 +1,7 @@
 
 \begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
-    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{iterative (mi=5)}  & \multicolumn{ 3 }{c}{simple}                                                                                          \\
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{iterative (iter=5)}  & \multicolumn{ 3 }{c}{simple}                                                                                          \\
     \cmidrule(lr){ 3-5 }
     \cmidrule(lr){ 6-8 }
     \cmidrule(lr){ 9-11 }
