--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -94,14 +94,14 @@ Especially suitable results may be reached faster by doing more processing on th
  Evaluating the experimental results of prompt optimization is central to making them accessible and comparable. 
  Precision~(\autoref{eq:precision}) and recall~(\autoref{eq:recall}) are key measures for information retrieval tasks~\cite{hayes2006AdvancingCandidate}.
  They are commonly used by many authors to compare different approaches to \TLR. 
- Further the $f1-score$ and $f2-score$, using a fixed $\beta$ in \autoref{eq:f_beta}, are used often.
+ Further the \fone and $f2-score$, using a fixed $\beta$ in \autoref{eq:f_beta}, are used often.
 I will use these four measures.
 \citewithauthor{hey2025RequirementsTraceability} and \citewithauthor{fuchss2025LiSSAGeneric} have used these when evaluating their results on the same data sets I intend to use.
 This way comparrision will be very simple.
  
 
 %\textit{TODO: Explain these metricize and how they are calculated instead of direct quoting and formatting formulas}
-\directQuote[sec. 7.1]{Precision measures the ratio of correctly predicted links and all predicted links. Recall measures the ratio of correctly predicted links and all relevant documents. It shows an approach’s ability to provide correct trace links. The F1 score is the harmonic mean of precision and recall. The Metrics are calculated in the following way, where TP is true positives, FP is false positives, and FN is false negatives.}{ewald2024RetrievalAugmentedLarge}
+\directQuote[sec. 7.1]{Precision measures the ratio of correctly predicted links and all predicted links. Recall measures the ratio of correctly predicted links and all relevant documents. It shows an approach’s ability to provide correct trace links. The \fone is the harmonic mean of precision and recall. The Metrics are calculated in the following way, where TP is true positives, FP is false positives, and FN is false negatives.}{ewald2024RetrievalAugmentedLarge}
 
 \begin{align}
     \label{eq:precision}
