--- a/tables/ZadenooriOptimizationPrompt.tex
+++ b/tables/ZadenooriOptimizationPrompt.tex
@@ -1,23 +1,17 @@
 
 \begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
-    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 2 }{c}{KISS-Original}  & \multicolumn{ 2 }{c}{feedback (iter=1, n=3)}  & \multicolumn{ 2 }{c}{feedback (iter=3, n=1)}  & \multicolumn{ 2 }{c}{feedback (iter=5, n=3)}                                                                                          \\
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 2 }{c}{KISS-Original}  & \multicolumn{ 2 }{c}{feedback i=1, n=3}  & \multicolumn{ 2 }{c}{feedback i=3, n=1}  & \multicolumn{ 2 }{c}{feedback i=5, n=3}                                                                                          \\
     \cmidrule(lr){ 3-4 }
     \cmidrule(lr){ 5-6 }
     \cmidrule(lr){ 7-8 }
     \cmidrule(lr){ 9-10 }
     &                            & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini        & GPT-4o        & GPT-4o-mini           \\
     \midrule
-    \multirow{ 3 }{*}{\rotatebox{90}{CCHIT}}
-    & P.    & 0.23    & 0.209    & \textbf{ 0.311 }    & 0.262    & 0.304    & 0.225    & 0.294    & 0.251 \\
-    & R.    & \textbf{ 0.155 }    & \textbf{ 0.155 }    & 0.148    & 0.153    & 0.148    & \textbf{ 0.155 }    & 0.148    & 0.153 \\
-    & F\textsubscript{1}    & 0.185    & 0.178    & \textbf{ 0.201 }    & 0.193    & 0.199    & 0.184    & 0.197    & 0.19 \\
-    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
-
     \multirow{ 3 }{*}{\rotatebox{90}{CM1-NASA}}
-    & P.    & 0.349    & 0.337    & 0.354    & \textbf{ 0.372 }    & 0.362    & 0.358    & 0.354    & 0.358 \\
+    & P.    & 0.345    & 0.337    & 0.354    & \textbf{ 0.372 }    & 0.362    & 0.358    & 0.354    & 0.358 \\
     & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 } \\
-    & F\textsubscript{1}    & 0.453    & 0.443    & 0.457    & \textbf{ 0.472 }    & 0.464    & 0.46    & 0.457    & 0.46 \\
+    & F\textsubscript{1}    & 0.45    & 0.443    & 0.457    & \textbf{ 0.472 }    & 0.464    & 0.46    & 0.457    & 0.46 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{GANNT}}
@@ -45,15 +39,15 @@
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{Avg.}}
-    & P.    & 0.355    & 0.345    & \textbf{ 0.449 }    & 0.381    & 0.402    & 0.405    & 0.427    & 0.385 \\
-    & R.    & \textbf{ 0.501 }    & \textbf{ 0.501 }    & 0.49    & 0.498    & 0.499    & 0.494    & 0.486    & 0.485 \\
-    & F\textsubscript{1}    & 0.405    & 0.399    & \textbf{ 0.437 }    & 0.417    & 0.429    & 0.424    & 0.43    & 0.417 \\
+    & P.    & 0.38    & 0.372    & \textbf{ 0.476 }    & 0.405    & 0.421    & 0.44    & 0.454    & 0.412 \\
+    & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.559    & 0.567    & 0.569    & 0.562    & 0.554    & 0.551 \\
+    & F\textsubscript{1}    & 0.449    & 0.443    & \textbf{ 0.484 }    & 0.462    & 0.475    & 0.472    & 0.476    & 0.463 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
     \multirow{ 3 }{*}{\rotatebox{90}{Weighted Avg.}}
-    & P.    & 0.308    & 0.292    & \textbf{ 0.385 }    & 0.33    & 0.364    & 0.318    & 0.37    & 0.337 \\
-    & R.    & \textbf{ 0.379 }    & \textbf{ 0.379 }    & 0.372    & 0.375    & 0.375    & 0.374    & 0.371    & 0.36 \\
-    & F\textsubscript{1}    & 0.324    & 0.317    & \textbf{ 0.351 }    & 0.33    & 0.343    & 0.328    & 0.346    & 0.334 \\
+    & P.    & 0.397    & 0.388    & \textbf{ 0.469 }    & 0.408    & 0.432    & 0.425    & 0.458    & 0.437 \\
+    & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.629    & 0.631    & 0.635    & 0.625    & 0.627    & 0.598 \\
+    & F\textsubscript{1}    & 0.484    & 0.477    & \textbf{ 0.523 }    & 0.489    & 0.508    & 0.494    & 0.518    & 0.499 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
 \end{tabularx}
