Update on Overleaf.

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -32,7 +32,7 @@
 \DeclareAcronym{gpt-4o-mini}{short=GPT-4o-mini, long = \texttt{GPT-4o-mini-2024-07-18}, cite=openai2024GPT4oSystem}
 \DeclareAcronym{gpt-5-mini}{short=GPT-5-mini, long = \texttt{GPT-5-mini-date}}
 \DeclareAcronym{text-embedding}{short=text-embedding-3,long=\texttt{text-embedding-3-large}}
-\DeclareAcronym{gpt-copilot}{long=\texttt{GPT-4.1 Copilot}}
+\DeclareAcronym{gpt-copilot}{short=Copilot,long=\texttt{GPT-4.1 Copilot}}
 \DeclareAcronym{AI}{short=AI, long=Artifical Intelligence}
 
 \newcommand{\ToT}[0]{\ac{ToT}\xspace}
@@ -62,6 +62,7 @@
 \newcommand{\OAI}[0]{OpenAI\xspace}
 \newcommand{\AI}[0]{\ac{AI}\xspace}
 \newcommand{\fone}[0]{F\textsubscript{1}-Score\xspace}
-
+\newcommand{\ftwo}[0]{F\textsubscript{2}-Score\xspace}
+\newcommand{\idots}[0]{$[\dots]$}
 
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
